--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -30,7 +30,7 @@
     {% include 'dashboard/menu.html' %}
   <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
     <!-- Navbar -->
-    <nav class="navbar navbar-main navbar-expand-lg position-sticky mt-4 top-1 px-0 mx-4 shadow-none border-radius-xl z-index-sticky" id="navbarBlur" data-scroll="true">
+    <nav class="navbar navbar-main navbar-expand-lg position-sticky mt-0 top-1 px-0 mx-0 shadow-none border-radius-xl z-index-sticky" id="navbarBlur" data-scroll="true">
       <div class="container-fluid py-1 px-3">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
@@ -48,18 +48,16 @@
             </div>
           </a>
         </div>
-
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
           <div class="ms-md-auto pe-md-3 d-flex align-items-center">
             </div>
           </div>
-
           <ul class="navbar-nav  justify-content-end">
             <li class="nav-item">
             </i>
               </a>
             </li>
-            <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
+            <li class="nav-item d-xl-none my-0 ps-3 d-flex align-items-center">
               <a href="javascript:;" class="nav-link text-body p-0" id="iconNavbarSidenav">
                 <div class="sidenav-toggler-inner">
                   <i class="sidenav-toggler-line"></i>
@@ -70,7 +68,7 @@
             </li>
             <li class="nav-item px-3">
               <a href="javascript:;" class="nav-link text-body p-0">
-                <i class="material-icons fixed-plugin-button-nav cursor-pointer">
+                <i class=" my-4 material-icons fixed-plugin-button-nav cursor-pointer">
               settings
             </i>
               </a>
@@ -120,7 +118,7 @@
       </div>
     </nav>
     <!-- End Navbar -->
-    <div class="container-fluid py-4">
+    <div class="container-fluid py-0">
   {% if messages %}
     {% for message in messages %}
       <div class="alert {{ message.tags }} alert-dismissible fade show text-white" role="alert">
@@ -135,9 +133,6 @@
     {% endblock content %}
   </main>
   <div class="fixed-plugin">
-    <a class="fixed-plugin-button text-dark position-fixed px-3 py-2">
-      <i class="material-icons py-2">settings</i>
-    </a>
     <div class="card shadow-lg">
       <div class="card-header pb-0 pt-3">
         <div class="float-start">
@@ -189,8 +184,6 @@
           </div>
         </div>
         <hr class="horizontal dark my-sm-4">
-        <a class="btn bg-gradient-primary w-100" href="/auth-login">Login</a>
-          </a>
         </div>
       </div>
     </div>
@@ -451,6 +444,7 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="{% static 'dashboard/assets/js/material-dashboard.min.js' %}?v=3.0.1"></script>
+
 </body>
 
 </html>
