--- a/templates/dashboard/menu.html
+++ b/templates/dashboard/menu.html
@@ -6,7 +6,7 @@
       <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
       <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/material-dashboard-pro/pages/dashboards/analytics.html " target="_blank">
         <img src="{% static 'dashboard/assets/img/logoumkt.png' %}" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="ms-1 font-weight-bold text-white">Blog Tio Andika</span>
+        <span class="ms-1 font-weight-bold text-white">TioWeb</span>
       </a>
     </div>
     <hr class="horizontal light mt-0 mb-2">
@@ -23,6 +23,12 @@
                 <a class="nav-link text-white " href="{% url 'logout' %}">
                   <span class="sidenav-mini-icon"> L </span>
                   <span class="sidenav-normal  ms-3  ps-1"> Logout </span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white " href="/">
+                  <span class="sidenav-mini-icon"> H </span>
+                  <span class="sidenav-normal  ms-3  ps-1"> Home </span>
                 </a>
               </li>
             </ul>
@@ -69,7 +75,20 @@
             <span class="nav-link-text ms-2 ps-3">Users</span>
           </a>
         </li>
+        </main> <footer class="footer py-4">
+        <div class="container">
+          <div class="row">
+              <div class="text-center text-brown mt-0">
+                <p class="mb-0">Tio Andika - 2311102441087</p>
+                <p class="mb-0">Prodi Teknik Informatika Fakultas SAINTEK</p>
+                <p class="mb-0">UMKT</p>
+              </div>
+          </div>
+        </div>
+      </footer>
+
         {% endif %}
       </ul>
     </div>
   </aside>
+
